src/objects/Campaign_Mbr_Status_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Default and available statuses for Campaign Members, by Campaign Type and Sub Type.</description>
    <fields>
        <fullName>Campaign_Subtype__c</fullName>
        <inlineHelpText>The optional Campaign Subtype this Campaign Member Status applies to.</inlineHelpText>
        <label>Campaign Subtype</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <inlineHelpText>The Campaign Type that this Campaign Member Status applies to.</inlineHelpText>
        <label>Campaign Type</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Campaign Member status is the default for Campaigns of this type. Only one value should be default per Campaign Type and Sub Type.</inlineHelpText>
        <label>Default Status?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResponded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Campaign Member Status counts as Responded.</inlineHelpText>
        <label>Counts as Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Label__c</fullName>
        <inlineHelpText>The label of this Campaign Member Status.</inlineHelpText>
        <label>Status Label</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Campaign Mbr Status Settings</label>
</CustomObject>